# physjitter

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
assets/: logo.c2pa
benches/: benchmarks.rs
certs/: .gitignore  ca.cnf  ca_cert.pem  certificate.pem  manifest.json  openssl.cnf  signer.cnf  signer_cert.pem
examples/: basic_session.rs  custom_engine.rs  verify_evidence.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_evidence_json.rs  fuzz_evidence_verify.rs  fuzz_human_model.rs  fuzz_jitter_compute.rs
src/: evidence.rs  lib.rs  model.rs  phys.rs  pure.rs  traits.rs
