[package]
name = "physjitter-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
serde_json = "1.0"

[dependencies.physjitter]
path = ".."

[[bin]]
name = "fuzz_evidence_json"
path = "fuzz_targets/fuzz_evidence_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_human_model"
path = "fuzz_targets/fuzz_human_model.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_evidence_verify"
path = "fuzz_targets/fuzz_evidence_verify.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_jitter_compute"
path = "fuzz_targets/fuzz_jitter_compute.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
